# software-engineering

./: .gitignore  README.md
data_processing_structures_and_algorithms/: CMakeLists.txt  Zadania.txt  ГумеровБР_4210_отчет_курсовая.docx
data_processing_structures_and_algorithms/Раздел_1/Тема_2/Номер_1/: Stack.cpp  Stack.h  Stack_methods.h
data_processing_structures_and_algorithms/Раздел_1/Тема_2/Номер_2/: Stack.cpp  Stack_methods.h
data_processing_structures_and_algorithms/Раздел_1/Тема_2/Номер_3/: Stack.cpp  Stack.h  Stack_methods.h
data_processing_structures_and_algorithms/Раздел_1/Тема_2/Номер_4/: Stack.cpp  Stack.h  Stack_methods.h  a.out  second.h
data_processing_structures_and_algorithms/Раздел_1/Тема_2/Номер_5/: RingQueue.cpp  RingQueue.h  a.out
data_processing_structures_and_algorithms/Раздел_1/Тема_2/Номер_7/: a.out  config.h  main.cpp
data_processing_structures_and_algorithms/Раздел_1/Тема_3/Номер_2/: a.out  second.cpp  second.h
data_processing_structures_and_algorithms/Раздел_1/Тема_3/Номер_3/: a.out  main.cpp  three.h
data_processing_structures_and_algorithms/Раздел_1/Тема_3/Номер_5/: a.out  five.cpp  five.h
data_processing_structures_and_algorithms/Раздел_1/Тема_4/Номер_1/: a.out  one.cpp  one.h
data_processing_structures_and_algorithms/Раздел_1/Тема_4/Номер_3/: a.out  three.cpp  three.h
data_processing_structures_and_algorithms/Раздел_1/Тема_5/Номер_1/: a.out  balanced_tree.h  funcs.h  main.cpp
data_processing_structures_and_algorithms/Раздел_1/Тема_5/Номер_2/: a.out  balanced_tree.h  funcs.h  main.cpp  stack.h
(+358 files in other folders)
