cmake_minimum_required(VERSION 3.22)
project(data_processing_structures_and_algorithms)

set(CMAKE_CXX_STANDARD 14)

include_directories("Раздел_1/Тема_2/Номер 2")

add_executable(data_processing_structures_and_algorithms
        "Раздел_1/Тема_2/Номер_1/Stack.cpp"
        "Раздел_1/Тема_2/Номер_1/Stack.h")
